--- a/src/components/Editor/components/Creator/components/Toolbar/index.css
+++ b/src/components/Editor/components/Creator/components/Toolbar/index.css
@@ -1,5 +1,5 @@
 .editor-toolbar {
-
+    background-color: #80deea !important;
 }
 
 .editor-toolbar .logo {
