--- a/src/components/Editor/components/Creator/index.css
+++ b/src/components/Editor/components/Creator/index.css
@@ -3,35 +3,45 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+    background-color: white;
 }
 
-.creator-wrapper .left-section,.right-section {
+.creator-wrapper .left-section, .right-section {
     height: 100%;
 }
 
 .creator-wrapper .left-section {
     width: 30%;
     float: left;
-    overflow: hidden;
     position: relative;
 }
 
 .creator-wrapper .right-section {
     width: 70%;
-    margin-left: calc(30%);
+    margin-left: 30%;
     height: calc(100% - 56px);
     position: relative;
     overflow: hidden;
 }
 
-.creator-wrapper .right-section .slide {
-    width: calc(100% - 4rem);
+.creator-wrapper .right-section .previewer {
+    padding: 2rem;
+    height: calc(80% - 4rem);
     position: relative;
-    margin: 2rem;
+}
+
+.creator-wrapper .right-section .previewer .slide-wrapper {
+    max-height: 100%;
+    position: relative;
+}
+
+.creator-wrapper .right-section .slide {
+    max-height:100%;
     padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
 .creator-wrapper .right-section .slide .content {
+    max-height: calc(100% - .1rem);
     position: absolute;
     top: 0;
     right: 0;
@@ -44,8 +54,8 @@
     bottom: 0;
     width:100%;
     height:20%;
-    background-color: rgb(232, 232, 232);
-    border-top: 1px solid rgb(224, 224, 224);
+    overflow: hidden;
+    background-color: rgb(232, 232, 232) !important;
 }
 
 .creator-wrapper .right-section .footer .add-slide-button {
